# nexum-chrome-sys

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  chrome-api.json  flake.nix
.github/workflows/: audit.yml  ci.yml  regenerate.yml  release.yml
crates/chrome-sys/: Cargo.toml
crates/chrome-sys-gen/: Cargo.toml
crates/chrome-sys-gen/src/: lib.rs  schema.rs
crates/nexum-chrome-gloo/: Cargo.toml
crates/nexum-chrome-gloo/src/: alarms.rs  events.rs  lib.rs  tabs.rs
crates/nexum-chrome-gloo/src/runtime/: mod.rs  port.rs
crates/nexum-chrome-sys/: Cargo.toml
crates/nexum-chrome-sys-gen/: Cargo.toml
crates/nexum-chrome-sys-gen/src/: generate.rs  lib.rs  main.rs  schema.rs
crates/nexum-chrome-sys-gen/src/generate/: events.rs  functions.rs  mod.rs  namespace.rs  types.rs  utils.rs
crates/nexum-chrome-sys/src/: lib.rs
crates/nexum-chrome-sys/src/features/: gen_action.rs  gen_alarms.rs  gen_app.rs  gen_app_runtime.rs  gen_app_window.rs  gen_appview_tag.rs  gen_audio.rs  gen_automation.rs  gen_bluetooth.rs  gen_bluetooth_low_energy.rs  gen_bluetooth_socket.rs  gen_bookmarks.rs  gen_browser.rs  gen_browser_action.rs  gen_browsing_data.rs  gen_certificate_provider.rs  gen_chrome_url_overrides.rs  gen_clipboard.rs  gen_commands.rs  gen_content_scripts.rs  gen_content_settings.rs  gen_context_menus.rs  gen_cookies.rs  gen_cross_origin_isolation.rs  gen_debugger.rs  gen_declarative_content.rs  gen_declarative_net_request.rs  gen_declarative_web_request.rs  gen_desktop_capture.rs  gen_devtools_inspected_window.rs  gen_devtools_network.rs  gen_devtools_panels.rs  gen_devtools_performance.rs  gen_devtools_recorder.rs  gen_diagnostics.rs  gen_dns.rs  gen_document_scan.rs  gen_dom.rs  gen_downloads.rs  gen_enterprise_device_attributes.rs  (+94 more)
