[workspace]
resolver = "2"
members = [
    "crates/chrome-sys",
    "crates/chrome-sys-gen",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/user/chrome-sys"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Code generation
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

# wasm-bindgen
wasm-bindgen = "0.2"
js-sys = "0.3"

# Utilities
anyhow = "1.0"
heck = "0.5"
