[workspace]
resolver = "2"
members = [
    "crates/nexum-chrome-sys",
    "crates/nexum-chrome-sys-gen",
]

[workspace.package]
version = "0.1.0"
authors = ["Nexum Contributors <hello@nxm.rs>"]
edition = "2024"
rust-version = "1.85"
license = "AGPL-3.0-or-later"
repository = "https://github.com/nxm-rs/nexum-chrome-sys"
homepage = "https://github.com/nxm-rs/nexum-chrome-sys"
documentation = "https://docs.rs/nexum-chrome-sys"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Code generation
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

# wasm-bindgen
wasm-bindgen = "0.2"
js-sys = "0.3"

# Utilities
anyhow = "1.0"
heck = "0.5"
