[package]
name = "nexum-chrome-sys-gen"
description = "Code generator for nexum-chrome-sys Chrome Extension API bindings"
keywords = ["wasm", "chrome", "extension", "codegen"]
categories = ["development-tools", "wasm"]
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "nexum-chrome-sys-gen"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { version = "4.5.53", features = ["derive"] }
heck.workspace = true
prettyplease = "0.2.37"
proc-macro2.workspace = true
quote.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
syn = { workspace = true, features = ["full", "parsing"] }
