[package]
name = "nexum-chrome-sys"
description = "Rust bindings for Chrome Extension APIs using wasm-bindgen"
readme = "../../README.md"
keywords = ["wasm", "chrome", "extension", "webextension", "browser"]
categories = ["wasm", "web-programming"]
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
js-sys.workspace = true
wasm-bindgen.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
serde-wasm-bindgen = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde", "dep:serde_json", "dep:serde-wasm-bindgen"]
action = []
alarms = []
app = []
app_runtime = []
app_window = []
appview_tag = []
audio = []
automation = []
bluetooth = []
bluetooth_low_energy = []
bluetooth_socket = []
bookmarks = []
browser = []
browser_action = []
browsing_data = []
certificate_provider = []
chrome_url_overrides = []
clipboard = []
commands = []
content_scripts = []
content_settings = []
context_menus = []
cookies = []
cross_origin_isolation = []
debugger = []
declarative_content = []
declarative_net_request = []
declarative_web_request = []
desktop_capture = []
devtools_inspected_window = []
devtools_network = []
devtools_panels = []
devtools_performance = []
devtools_recorder = []
diagnostics = []
dns = []
document_scan = []
dom = []
downloads = []
enterprise_device_attributes = []
enterprise_hardware_platform = []
enterprise_kiosk_input = []
enterprise_login = []
enterprise_networking_attributes = []
enterprise_platform_keys = []
enterprise_remote_apps = []
events = []
experimental_actor = []
experimental_ai_data = []
extension = []
extension_types = []
extensions_manifest_types = []
file_browser_handler = []
file_handlers = []
file_system = []
file_system_provider = []
font_settings = []
gcm = []
hid = []
history = []
i18n = []
icon_variants = []
identity = []
idle = []
idltest = []
incognito = []
input_ime = []
instance_id = []
login = []
login_screen_storage = []
login_screen_ui = []
login_state = []
management = []
manifest_types = []
mdns = []
media_galleries = []
networking_onc = []
notifications = []
oauth2 = []
offscreen = []
omnibox = []
page_action = []
page_capture = []
permissions = []
platform_keys = []
power = []
printer_provider = []
printing = []
printing_metrics = []
privacy = []
processes = []
protocol_handlers = []
proxy = []
reading_list = []
requirements = []
runtime = []
scripting = []
search = []
serial = []
sessions = []
shared_module = []
side_panel = []
socket = []
sockets_tcp = []
sockets_tcp_server = []
sockets_udp = []
storage = []
sync_file_system = []
system_cpu = []
system_display = []
system_log = []
system_memory = []
system_network = []
system_storage = []
tab_capture = []
tab_groups = []
tabs = []
test = []
top_sites = []
tts = []
tts_engine = []
types = []
usb = []
user_scripts = []
virtual_keyboard = []
vpn_provider = []
wallpaper = []
web_accessible_resources = []
web_authentication_proxy = []
web_navigation = []
web_request = []
webview_tag = []
windows = []

